tests/NormalTests/paczka1/fuzzy1/98446457.err
Error in line 2: VvC A733 18,8
Error in line 10: X9Dis3Rm S457 71,9
Error in line 15: X9Dis3Rm A58/ 10,/
Error in line 11: X9Dis3Rm A893 74,2
Error in line 21: X9Dis3Rm A587 27,4
Error in line 32: FAT A587 -1,9
Error in line 34: 0ikJEHzQ2F8 A733 29,4
Error in line 35: 0ikJEHzQ2F8 A587 24,1
Error in line 24: X9Dis3Rm S457 97,2
